v2.2.0
Added support for Red Button.
Fixed empty directory in Channel Highlights.

v2.1.3
Added more bitrate options for Radio.
Switched to new stable source for live TV.
COMPATIBILITY NOTE:
If autoplay is used for live TV, users MUST set their preferences for live TV bitrate again.

v2.1.2
Fixed missing live non-HD TV.

v2.1.1
Fixed live HD TV.

v2.1.0
Added support for international radio.
Set default Live TV to 1.7Mbps.
Live Radio max bitrate setting.
Removed BBC Three live.

v2.0.1
Reverted sorting of programmes back to previous default.
Fixed various warnings in the logfile.
Added support for Channel A-Z.

v2.0.0
Added support for radio.
Broke up code into different files.
Added option to sign out BBCiD.

v1.3.5
Fix for Unicode characters in subtitles.

v1.3.4
Fix for new URL of BBC Three.

v1.3.3
Fix for episode count in Favourites.

v1.3.2
Fixed missing multiple episodes in Favourites.
Added missing unescaping of HTML.
Fix for single page listings.
Minor fixes of potential errors.
Added optional settings for displaying programme lists.

v1.3.1
Fixed aired date in Favourites and Watching.
Fixed incompatibility with Python 2.6.

v1.3.0
Redesign of scrapers for more robustness, speed and ease of maintenance.
New progress bar during lengthy scrapes.
Search groups are supported again.
Fixed missing aired date.
Corrected and added dependencies.
Added support for keyword injection in Search.

v1.2.10
Fix for changed HTML layout.

v1.2.9
Fixed broken aired date.
Added rudimentary support for aired date in Categories.

v1.2.8
Temporarily removed support for search groups as it may cause Search to fail completely.

v1.2.7
Fixed bug in Categories with subtcategories, which was introduced in 1.2.6.

v1.2.6
Cleaned up scraping of aired date.
Fixed subtitles for newer programmes.
Fixed some missing channel icons for Live TV.

v1.2.5
Adapted to new design Highlights website.

v1.2.4
Added Channel Highlights.
Fixed missing plot bug in Watching.