@@ -1,3 +1,7 @@
+v2.x.y
+Added mode which shows CBeebies/CBBC only.
+Moved translation to .po format.
+
 v2.2.0
 Added support for Red Button.
 Fixed empty directory in Channel Highlights.
